<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bond.musicstructure.ArtistActivity">

    <LinearLayout
        android:id="@+id/selection_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_selection_pane_top"
        android:paddingBottom="@dimen/padding_selection_pane_bottom"
        android:paddingLeft="@dimen/padding_8dp"
        android:paddingRight="@dimen/padding_8dp"
        >

        <Button
            android:id="@+id/artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/now_artist"
            android:textSize="@dimen/text_size_20sp" />

        <Button
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now_genre"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            />

        <Button
            android:id="@+id/playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now_search"
            android:textSize="@dimen/text_size_20sp"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selection_pane"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="@dimen/padding_8dp"
        android:paddingRight="@dimen/padding_8dp"
        android:text="@string/genre_help" />

    <LinearLayout
        android:id="@+id/bottom_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/padding_8dp"
        android:paddingRight="@dimen/padding_8dp"
        android:paddingBottom="@dimen/padding_8dp">
        <TextView
            android:id="@+id/now_playing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_title" />

        <TextView
            android:id="@+id/now_playing_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_value"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/play_pane"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_playlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_playlist_add_black_24dp" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_play_arrow_black_24dp" />

            <ImageButton
                android:id="@+id/favourite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_favorite_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seek_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/skip_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_skip_previous_black_24dp" />

            <ImageButton
                android:id="@+id/fast_rewind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_fast_rewind_black_24dp" />

            <ImageButton
                android:id="@+id/fast_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_fast_forward_black_24dp" />

            <ImageButton
                android:id="@+id/skip_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_skip_next_black_24dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
